syntax = "proto3";

package blog;

option go_package = "blog/blogpb";

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogRequestResponse {
  Blog blog = 1; // will have a blog_id
}

message ReadBlogRequest {
  string blog_id = 1;
}

message ReadBlogRequestResponse {
  Blog blog = 1;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogRequestResponse);

  // Return NOT_FOUND if not founf
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogRequestResponse);
}
